--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "hardhat run --network localhost scripts/deploy.ts",
+    "test": "hardhat test"
   },
   "keywords": [],
   "author": "",
